--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="action_settings">Settings</string>
     
     <string name="university">Universidade:</string>
+    <string name="general_information">INFORMAÇÕES GERAIS</string>
 
 </resources>
