--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="indicator">INDICADORES</string>
 
     <string name="m_start_year">Ano de início do mestrado:</string>
+    <string name="d_start_year">Ano de início do doutorado:</string>
 
 </resources>
