--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,6 @@
 
     <string name="m_start_year">Ano de início do mestrado:</string>
     <string name="d_start_year">Ano de início do doutorado:</string>
+    <string name="year_concept">Conceito no ano avaliado:</string>
 
 </resources>
