Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="m_start_year">Ano de início do mestrado:</string>
     <string name="d_start_year">Ano de início do doutorado:</string>
     <string name="year_concept">Conceito no ano avaliado:</string>
+    <string name="permanent_teachers">Média anual de docentes permanentes:</string>
 
 </resources>
