Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="year_concept">Conceito no ano avaliado:</string>
     <string name="permanent_teachers">Média anual de docentes permanentes:</string>
     <string name="theses">Total de teses defendidas:</string>
+    <string name="dissertation">Total de dissertações defendidas:</string>
 
 </resources>
