Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="permanent_teachers">Média anual de docentes permanentes:</string>
     <string name="theses">Total de teses defendidas:</string>
     <string name="dissertation">Total de dissertações defendidas:</string>
+    <string name="artistic_works">Total de trabalhos artísticos defendidos:</string>
 
 </resources>
