Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="theses">Total de teses defendidas:</string>
     <string name="dissertation">Total de dissertações defendidas:</string>
     <string name="artistic_works">Total de trabalhos artísticos defendidos:</string>
+    <string name="chapters">Quantidade de capítulos de livros publicados:</string>
 
 </resources>
