Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="dissertation">Total de dissertações defendidas:</string>
     <string name="artistic_works">Total de trabalhos artísticos defendidos:</string>
     <string name="chapters">Quantidade de capítulos de livros publicados:</string>
+    <string name="integral_texts">Quantidade de textos integrais publicados:</string>
 
 </resources>
