Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,6 @@
     <string name="integral_texts">Quantidade de textos integrais publicados:</string>
     <string name="collections">Quantidade de coletâneas publicadas:</string>
     <string name="entries">Quantidade de verbetes e outros publicados:</string>
+    <string name="articles">Quantidade de artigos publicados:</string>
 
 </resources>
