Creating one indicator field of the layout project

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="collections">Quantidade de coletâneas publicadas:</string>
     <string name="entries">Quantidade de verbetes e outros publicados:</string>
     <string name="articles">Quantidade de artigos publicados:</string>
+    <string name="works">Quantidade de trabalhos publicados:</string>
 
 </resources>
