Creating a new java class to search by indicator and adding a spinner
Signed-off-by: Elaine Cristina Meirelles <ecmeirelles@hotmail.com>
Signed-off-by: Jonnatas Lennon Lima Costa <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,5 +27,10 @@
     <string name="entries">Quantidade de verbetes e outros publicados:</string>
     <string name="articles">Quantidade de artigos publicados:</string>
     <string name="works">Quantidade de trabalhos publicados:</string>
-
+    
+    <string-array name="list">
+        <item>Escolha uma opção</item>
+        <item>Curso</item>
+        <item>Instituição</item>
+    </string-array>
 </resources>
