--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,11 +9,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
-    
     <string name="university">Universidade:</string>
     <string name="general_information">INFORMAÇÕES GERAIS</string>
     <string name="indicator">INDICADORES</string>
-
     <string name="m_start_year">Ano de início do mestrado:</string>
     <string name="d_start_year">Ano de início do doutorado:</string>
     <string name="year_concept">Conceito no ano avaliado:</string>
@@ -27,10 +25,30 @@
     <string name="entries">Quantidade de verbetes e outros publicados:</string>
     <string name="articles">Quantidade de artigos publicados:</string>
     <string name="works">Quantidade de trabalhos publicados:</string>
-    
+
     <string-array name="list">
         <item>Escolha uma opção</item>
         <item>Curso</item>
         <item>Instituição</item>
     </string-array>
+
+    <string name="field_main">Listar por:</string>
+
+    <string-array name="indicator">
+        <item>Escolha uma opção</item>
+        <item>Ano de inicio de mestrado</item>
+        <item>Ano de inicio do doutorado</item>
+        <item>Média anual de docentes permanentes</item>
+        <item>Total de teses defendidas</item>
+        <item>Total de dissertações defendidas</item>
+        <item>Total de trabalhos artísticos defendidos</item>
+        <item>Quantidade de capítulos de livros publicados</item>
+        <item>Quantidade de textos integrais publicados</item>
+        <item>Quantidade de coletâneas publicadas</item>
+        <item>Total de trabalhos artísticos defendidos</item>
+        <item>Quantidade de verbetes e outros publicados</item>
+        <item>Quantidade de artigos publicados</item>
+        <item>Quantidade de trabalhos publicados</item>
+    </string-array>
+
 </resources>
