configuring the layout
Signed-off-by: Jonnatas Lennon Lima Costa <jonatas_lenon@hotmail.com>
Signed-off-by: Elaine cristina Meirelles <ecmeirelles@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -58,7 +58,7 @@
     </string-array>
     
     <string name="between">entre</string>
-    <string name="max">Máximo</string>
+    <string name="max">Max</string>
     <string name="search">Buscar</string>
 
 </resources>
