Fixing interface string bugs.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,5 +61,10 @@
         <item>2007</item>
         <item>2010</item>
     </string-array>
+    <string name="course">Curso</string>
+    <string name="institutions">Instituições</string>
+    <string name="courses">Cursos</string>
+    <string name="evaluation_date">DATA DA AVALIAÇÃO</string>
+    <string name="modality">MODALIDADE</string>
 
 </resources>
