Creating list adapter and events.
Signed-off-by: André Bernardes <andrebsguedes@gmail.com>
Signed-off-by: Jonnatas Lennon Lima Costa <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,10 +42,9 @@
 
     <string-array name="indicator">
         <item>Indicador</item>
-        <item>Conceito</item>
+        <item>Conceito no ano avaliado</item>
         <item>Ano de inicio de mestrado</item>
         <item>Ano de inicio do doutorado</item>
-        <item>Conceito no ano avaliado:</item>
         <item>Média anual de docentes permanentes</item>
         <item>Total de teses defendidas</item>
         <item>Total de dissertações defendidas</item>
