adding some layouts on historic.xml
Signed-off-by: Brenddon Gontijo <brenddongontijo@msn.com>
Signed-off-by: Jonnatas Lennon <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="courses">Cursos</string>
     <string name="evaluation_date">DATA DA AVALIAÇÃO</string>
     <string name="modality">MODALIDADE</string>
+    <string name="history">Historico</string>
 
 </resources>
