Adding new item section on navigtion_drawer
Signed-off-by: Brenddon Gontijo <brenddongontijo@msn.com>
Signed-off-by: Jonnatas Lennon <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,5 +68,6 @@
     <string name="evaluation_date">DATA DA AVALIAÇÃO</string>
     <string name="modality">MODALIDADE</string>
     <string name="history">Historico</string>
+    <string name="title_section4">Historico de Pesquisa</string>
 
 </resources>
