Created class ListHistoryAdapter and changed some layouts
Signed-off-by Brenddon Gontijo <brenddongontijo@msn.com>
Signed-off-by Jonnatas Lennon <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="courses">Cursos</string>
     <string name="evaluation_date">DATA DA AVALIAÇÃO</string>
     <string name="modality">MODALIDADE</string>
-    <string name="history">Historico</string>
-    <string name="title_section4">Historico de Pesquisa</string>
+    <string name="history">Histórico</string>
+    <string name="title_section4">Histórico de Pesquisa</string>
 
 </resources>
