Changes on history_list_item
Branch= historic

Signed-off-by Brenddon Gontijo <brenddongontijo@msn.com>
Signed-off-by Jonnatas Lennon <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -70,6 +70,9 @@
     <string name="history">Histórico</string>
     <string name="search_by">Busca por</string>
     <string name="title_section4">Histórico de Pesquisa</string>
+    <string name="byYear">no ano de</string>
+    <string name="by_indicator">por</string>
+    <string name="and">e</string>
 
 
 </resources>
