Creating custom list adapter for search history
(search_history)

Signed-off-by: Andre Bernardes <andrebsguedes@gmail.com>
Signed-off-by: Elaine Cristina Meirelles <ecmeirelles@hotmail.com>
Signed-off-by: Fabio Teixeira <fabio1079@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,7 @@
         <item>2010</item>
     </string-array>
     <string name="course">Curso</string>
+    <string name="institution">Instituição</string>
     <string name="institutions">Instituições</string>
     <string name="courses">Cursos</string>
     <string name="evaluation_date">DATA DA AVALIAÇÃO</string>
