Created helper that contains all the indicators and setted ListHistoryAdapter fields values
(search_history)

Signed-off-by: Andre Bernardes <andrebsguedes@gmail.com>
Signed-off-by: Elaine Cristina Meirelles <ecmeirelles@hotmail.com>
Signed-off-by: Fabio Teixeira <fabio1079@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -74,6 +74,6 @@
     <string name="byYear">no ano de</string>
     <string name="by_indicator">por</string>
     <string name="and">e</string>
-
+	<string name="maximum">Máximo</string>
 
 </resources>
