--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,5 +80,6 @@
 	<string name="search_date">Busca realizada em:</string>
 	<string name="title_text_compare">Comparar Instituições</string>
 	<string name="choose_the_evaluation_year">Ano da avaliação:</string>
+	<string name="select_a_course">Selecione um curso</string>
 
 </resources>
