Adding total of each institution evaluation to compare layout
(compare)

Signed-off-by: Fabio Teixeira <fabio1079@gmail.com>
Signed-off-by: Jonnatas Lenno Lima Costa <jonatas_lenon@hotmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,5 +82,6 @@
 	<string name="choose_the_evaluation_year">Ano da avaliação:</string>
 	<string name="select_a_course">Selecione um curso</string>
 	<string name="select_a_year">Selecione um ano</string>
+	<string name="compare_show_better_institutions_results">Total de melhores resuldados:</string>
 
 </resources>
